# Intelli-verse-X-SDK

./: .cursorignore  .cursorindexingignore  .cursorrules  .gitattributes  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  Intelli-verse-X-Unity-SDK.slnx  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  mkdocs.yml
.cursor/: AI_GUARDRAILS.md  ANTI_PATTERNS.md  DECISION_TREE.md  ENFORCEMENT.md  FRESHNESS.md  GLOBAL_FRIENDS_SYSTEM_SPECIFICATION.md  HOT_CONTEXT.md  INTENTS.md  IVX_FRIENDS_SCENE_SETUP.md  NON_GOALS.md  SHARE_RATE_US_AUDIT.md  SYSTEM_MAP.md  architecture.md  assumptions.md  commands.json  context.md  naming-and-style.md
.cursor/examples/: CONFIG_TEMPLATE.cs  INTERFACE_TEMPLATE.cs  MANAGER_TEMPLATE.cs  SERVICE_TEMPLATE.cs
.cursor/memory/: README.md  corrections.json  decisions.json  patterns.json
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cpp-sdk.yml  (+10 more)
Assets/: New Scene.unity  UniversalRenderPipelineGlobalSettings.asset
AuthBackend/: Program.cs  README.md  appsettings.json
ProjectSettings/: AndroidResolverDependencies.xml  EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
SDKs/cocos2dx/: CMakeLists.txt  README.md
SDKs/cocos2dx/Classes/IntelliVerseX/: IVXConfig.cpp  IVXConfig.h  IVXManager.cpp  IVXManager.h  IVXTypes.h
SDKs/cocos2dx/examples/: ExampleScene.cpp  ExampleScene.h
SDKs/cpp/: CMakeLists.txt  README.md
SDKs/cpp/examples/: main.cpp
SDKs/cpp/include/intelliversex/: ivx.h  ivx_config.h  ivx_manager.h  ivx_types.h
SDKs/cpp/src/: ivx_manager.cpp  ivx_storage.cpp
SDKs/cpp/tests/: test_ivx.cpp
config/: README.md  keys.example.json
docs/: CONTEXT_ENGINEERING_REVIEW.md  GOLDEN_PATHS.md  IntelliVerseX_SDK_Release_Checklist.docx  IntelliVerseX_WebGL_Distribution_Platforms.docx  SDK_READINESS_REPORT.md  UPM_PACKAGE_TRANSFORMATION_PLAN.md  changelog.md  generate_checklist_docx.py  generate_webgl_platforms_docx.py  index.md  sdk_platform_readiness.csv  sdk_release_tracker.csv  sdk_task_backlog.csv  webgl_distribution_platforms.csv
tools/: validate.ps1
(+528 files in other folders)
